--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^7.0.0",
     "@mui/x-date-pickers": "^7.28.0",
     "antd": "^5.24.5",
+    "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0"
